--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:alpha="0.9"
-    android:background="@drawable/back"
+    android:background="@color/main_color"
     android:padding="10dip" >
 
     <TextView
