--- a/res/layout/gameboard.xml
+++ b/res/layout/gameboard.xml
@@ -2,56 +2,63 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    android:background="@drawable/back" >
+    android:orientation="vertical"
+    android:background="@color/main_color">
 
-  <RelativeLayout
+  <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent" >
-
-    <TextView
-        android:id="@+id/step"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text=""
-        android:textSize="18sp" />
-
-    <TableLayout
-        android:id="@+id/tablelayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:gravity="center_horizontal|center_vertical" >
-    </TableLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:gravity="center_horizontal|center_vertical"
-        android:background="@drawable/circle_btn"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp" >
-        
-    </LinearLayout>
-
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:background="@color/main_color" >
+      
+  
     <Button
         android:id="@+id/refresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:alpha="0.4"
         android:background="@drawable/sync" />
 
-</RelativeLayout>
+  <TextView
+        android:id="@+id/step"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="18sp" />
+  
+  </LinearLayout>
+  
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:gravity="center_horizontal|center_vertical"
+      android:layout_weight="1"
+      android:background="@color/play"
+      android:orientation="horizontal" >
+
+      <TableLayout
+          android:id="@+id/tablelayout"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:gravity="center_horizontal|center_vertical"
+          android:minHeight="100dip"
+          android:minWidth="100dip" >
+
+      </TableLayout>
+
+    </LinearLayout>
+    
+  
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|center_vertical"
+        android:background="@color/grey"
+        android:orientation="horizontal"
+        android:layout_weight="1" >
+        
+    </LinearLayout>
+
+
+
 </LinearLayout>
