--- a/res/layout/levels.xml
+++ b/res/layout/levels.xml
@@ -9,39 +9,53 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:background="@color/main_color"
-	    android:orientation="vertical"
-	    android:padding="-7dip"
-	    android:paddingBottom="30dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center_horizontal|center_vertical"
         >
         
-     <ImageView
-         android:id="@+id/imageView1"
-         android:layout_width="94dp"
-         android:layout_height="wrap_content"
-         android:layout_gravity="center_horizontal|center_vertical"
-         android:layout_weight="0.96"
-         android:paddingBottom="10dp"
-         android:paddingTop="20dp"
-         android:src="@drawable/ic_launcher" />
+      <TextView
+          android:id="@+id/back_to_startmenu"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_weight="2"
+          android:background="@color/main_color"
+          android:gravity="center_horizontal|center_vertical"
+          android:text="@string/back"
+          android:textColor="@color/white"
+          android:textSize="60dip" />
+      
+      <TextView
+          android:id="@+id/levels_name"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:background="@color/main_color"
+          android:gravity="center_horizontal|center_vertical"
+          android:text="@string/start_title"
+          android:textColor="@color/white"
+          android:textSize="40dip" />
+        
+    </LinearLayout>
    
-    <TextView
-        android:id="@+id/start_button"
+
+    
+     <TextView
+        android:id="@+id/easy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@drawable/playbutton_selector"
         android:gravity="center_horizontal|center_vertical"
-        android:text="@string/start_label"
+        android:text="@string/easy_model"
         android:textColor="@color/white" />
     
      <TextView
-         android:id="@+id/score_button"
+         android:id="@+id/medium"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="-7dip"
-         android:text="@string/score_label"
+         android:text="@string/medium_model"
          android:layout_weight="1"
          android:background="@drawable/button_selector"
          android:gravity="center_horizontal|center_vertical"
@@ -50,26 +64,14 @@
     
     
     <TextView
-        android:id="@+id/about_button"
+        android:id="@+id/hard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-7dip"
 		android:background="@drawable/button_selector"
         android:gravity="center_horizontal|center_vertical"
-        android:text="@string/about_label"
+        android:text="@string/hard_model"
         android:layout_weight="1"
         android:textColor="@color/ink" />
     
-    <TextView
-        android:id="@+id/exit_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-7dip"
-		android:background="@drawable/button_selector"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="@string/exit_label"
-        android:layout_weight="1"
-        android:textColor="@color/dark" />
-    
-    </LinearLayout>
 </LinearLayout>
