--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -2,17 +2,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:alpha="0.9"
-    android:background="@color/main_color"
-    android:padding="10dip" >
+    android:background="@color/main_color">
+    
 
+   <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dip"
+        android:background="@color/play"
+        android:layout_below="@+id/imageView1"
+        android:gravity="center_horizontal|center_vertical"
+        >
+    
     <TextView
         android:id="@+id/about_content"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView1"
-        android:layout_centerHorizontal="true"
+        android:textColor="@color/white"
         android:text="@string/about_text" />
+    
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView1"
@@ -21,8 +30,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="14dp"
-        android:alpha="0.9"
+        android:contentDescription="@string/app_name"
         android:paddingBottom="10dp"
-        android:src="@drawable/app_name" />
+        android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
