--- a/res/layout/gameboard.xml
+++ b/res/layout/gameboard.xml
@@ -2,63 +2,75 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/main_color">
+    android:background="@color/main_color"
+    android:orientation="vertical" >
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_weight="1"
-      android:background="@color/main_color" >
-      
-  
-    <Button
-        android:id="@+id/refresh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/sync" />
-
-  <TextView
-        android:id="@+id/step"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="18sp" />
-  
-  </LinearLayout>
-  
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:gravity="center_horizontal|center_vertical"
-      android:layout_weight="1"
-      android:background="@color/play"
-      android:orientation="horizontal" >
-
-      <TableLayout
-          android:id="@+id/tablelayout"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:gravity="center_horizontal|center_vertical"
-          android:minHeight="100dip"
-          android:minWidth="100dip" >
-
-      </TableLayout>
-
-    </LinearLayout>
     
-  
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@color/main_color" >
+
+        <TextView
+            android:id="@+id/back_to_startmenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/main_color"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="@string/back"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:background="@color/play"
+            android:text="@string/refresh"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/step"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="step"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+    
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@color/play"
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal" >
+
+        <TableLayout
+            android:id="@+id/tablelayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal|center_vertical"
+            android:minHeight="100dip"
+            android:minWidth="100dip" >
+        </TableLayout>
+    </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal|center_vertical"
+        android:layout_weight="1"
         android:background="@color/grey"
-        android:orientation="horizontal"
-        android:layout_weight="1" >
-        
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal" >
     </LinearLayout>
-
-
 
 </LinearLayout>
