--- a/res/layout/high_score.xml
+++ b/res/layout/high_score.xml
@@ -1,25 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/main_color" >
 
+        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal|center_vertical"
+        >
+        
+      <TextView
+          android:id="@+id/back_to_startmenu"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_weight="2"
+          android:background="@color/main_color"
+          android:gravity="center_horizontal|center_vertical"
+          android:text="@string/back"
+          android:textColor="@color/white"
+          android:textSize="60sp" />
+      
+      <TextView
+          android:id="@+id/levels_name"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:background="@color/main_color"
+          android:gravity="center_horizontal|center_vertical"
+          android:text="@string/score_label"
+          android:textColor="@color/white"
+          android:textSize="40sp" />
+        
+    </LinearLayout>
+    
     <TextView
         android:id="@+id/highScore"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Medium Text"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_weight="2"
+        android:background="@color/play"
+        android:text="@string/no_data"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/highScore"
-        android:layout_centerHorizontal="true"
-        android:text="高分榜\n\n"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-</RelativeLayout>
+ </LinearLayout>
