--- a/res/layout/welcome.xml
+++ b/res/layout/welcome.xml
@@ -2,12 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
-<ImageView 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:src="@drawable/welcome"
-    android:background="#ffffff"
-    android:scaleType="centerCrop"/>
+    android:background="@color/main_color"
+    android:orientation="horizontal" >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:background="@color/main_color" >
+    </TextView>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal" >
+        
+       <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_weight="2"
+        android:src="@drawable/ic_launcher" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_weight="5"
+            android:background="@color/play"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:padding="10sp"
+            android:textSize="30sp" >
+        </TextView>
+    </LinearLayout>
+
 </LinearLayout>
