--- a/res/layout/gameboard.xml
+++ b/res/layout/gameboard.xml
@@ -42,6 +42,15 @@
             android:text="step"
             android:textColor="@color/white"
             android:textSize="30sp" />
+        <Button
+            android:id="@+id/help"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:background="@color/play"
+            android:text="@string/help"
+            android:textSize="30sp" />
     
     </LinearLayout>
 
