--- a/res/layout/levels.xml
+++ b/res/layout/levels.xml
@@ -48,6 +48,7 @@
         android:background="@drawable/playbutton_selector"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/easy_model"
+        android:textSize="20sp"
         android:textColor="@color/white" />
     
      <TextView
@@ -57,6 +58,7 @@
          android:layout_marginTop="-7dip"
          android:text="@string/medium_model"
          android:layout_weight="1"
+         android:textSize="20sp"
          android:background="@drawable/button_selector"
          android:gravity="center_horizontal|center_vertical"
          android:textColor="@color/ink" />
@@ -72,6 +74,7 @@
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/hard_model"
         android:layout_weight="1"
+        android:textSize="20sp"
         android:textColor="@color/ink" />
     
 </LinearLayout>
