--- a/res/layout/startmenu.xml
+++ b/res/layout/startmenu.xml
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textSize="20sp"
         android:background="@drawable/playbutton_selector"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/start_label"
@@ -43,6 +44,7 @@
          android:layout_marginTop="-7dip"
          android:text="@string/score_label"
          android:layout_weight="1"
+         android:textSize="20sp"
          android:background="@drawable/button_selector"
          android:gravity="center_horizontal|center_vertical"
          android:textColor="@color/ink" />
@@ -58,6 +60,7 @@
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/about_label"
         android:layout_weight="1"
+        android:textSize="20sp"
         android:textColor="@color/ink" />
     
     <TextView
@@ -69,6 +72,7 @@
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/exit_label"
         android:layout_weight="1"
+        android:textSize="20sp"
         android:textColor="@color/dark" />
     
     </LinearLayout>
